--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ li:before {
   margin-right: 5px;
 }
 
-#startBtn {
+.btn {
   background-color: #4CAF50;
   color: white;
   padding: 10px 20px;
@@ -52,7 +52,7 @@ li:before {
   margin-left: 2rem;
 }
 
-#startBtn:hover{
+.btn:hover{
   box-shadow:
     inset 0 -3em 3em rgba(0, 0, 0, 0.1),
     0 0 0 2px rgb(255, 255, 255),
